<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_feild"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edit_name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-little"
            android:text="@string/topplings"
            style="@style/cool"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <CheckBox
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:onClick="addCream"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/whipped_cream"
                style="@style/cool"
               />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <CheckBox
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:onClick="addChoco"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/chocolate"
                style="@style/cool"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-little"
            android:text="@string/quantity"
            style="@style/cool"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:onClick="increment"
                android:padding="1dp"
                android:text="+"
                android:background="#1E88E5"

                android:textSize="20dp"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="0"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:onClick="decrement"
                android:padding="1dp"
                android:text="-"
                android:background="#1E88E5"

                android:textSize="20dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-little"
            android:text="@string/order_summary"
            style="@style/cool"

            />
        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16dp"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:background="#1E88E5"
            style="@style/cool"
            android:gravity="center"

            />

    </LinearLayout>

</ScrollView>